--- a/website.html
+++ b/website.html
@@ -30,24 +30,88 @@
                     Home
                     <span class="sr-only">(current)</span>
                 </a>
-                <a class="nav-link navbar-font-style" href="#">Introduction</a>
-                <a class="nav-link navbar-font-style" href="#">Theory</a>
-                <a class="nav-link navbar-font-style" href="#">Experiment</a>
-                <a class="nav-link navbar-font-style" href="#">Contact Us</a>
+                <a class="nav-link navbar-font-style" href="#Introduction">Introduction</a>
+                <a class="nav-link navbar-font-style" href="#Aim-and-theory">Aim and Theory</a>
+                <a class="nav-link navbar-font-style" href="#videos">videos</a>
+                <a class="nav-link navbar-font-style" href="#Followus">Follow Us</a>
             </div>
         </div>
     </nav>
-    <div class="Banner" id="Banner">
-        <div class="d-flex flex-column justify-content-top cahm-exp-banner-card pt-5">
-            <div class="cahm-exp-banner-text-card pt-5">
-                <h1>Hot and cold mounting</h1>
+    <div class="Banner" id="Introduction">
+        <div class="d-flex flex-column justify-content-center cahm-exp-banner-card pt-5">
+            <div class="banner-text-card pt-5">
+                <h1 class="banner-text-card-heading">Hot and cold mounting</h1>
+                <p class="banner-text-card-para">The purpose of mounting is to protect fragile or coated materials during preparation and to obtain perfect edge retention. Mounting is used when the protection of layers is imperative, and also it enables a safer and more convenient handling of small, sharp, or irregularly shaped specimens.</p>
             </div>
         </div>
     </div>
-    <div class="Introduction" id="Introduction">
-
+    <dic class="pt-5 pb-5" id="Aim-and-theory">
+        <div class="p-4">
+            <h1>Aim</h1>
+            <ul>
+                <li>
+                    To list methods available to mount specimens
+                    <ol>
+                        <li>Cold mounting</li>
+                        <li>Hot mounting</li>
+                    </ol>
+                </li>
+                <li>To describe procedure of mounting specimens</li>
+                <li>To list various resins used</li>
+                <li>To list environmental hazards while using cold mountingresins</li>
+            </ul>
+            <h1>Theory</h1>
+            <ul>
+                <li>The primary reason for mounting samples is simply to facilitate
+                    ease in handling. Sharp corners are eliminated, thereby
+                    increasing the safety to the metallographer and avoiding damage
+                    to the papers and cloths used for preparation.
+                </li>
+                <li>
+                    Also, all samples are of a uniform size and shape so that
+                    automatic preparation equipment can be usedclass=""
+                </li>
+                <li>
+                    The process protects the material’s surface, fill voids in damaged
+                    (porous) materials, and improves handling of irregularly shaped
+                    samples.
+                </li>
+                <li>
+                    Standard mounts usually measure 1, 1.1/4 or 1.1/2 inch in
+                    diameter. The mount thickness should be about one half the
+                    mount diameter. Thin mounts are harder to handle and very
+                    thick mounts tend to rock during preparation.
+                </li>
+            </ul>
+            <h1>Procedure</h1>
+            <ol>
+                <li></li>
+            </ol>
+        </div>
+    </dic>
+    <div id="videos">
+        <div class="container mt-5">
+            <h1>some video references</h1>
+            <div class="row">
+                <div class="col-12">
+                    <div class="embed-responsive embed-responsive-16by9 mb-5">
+                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/6KdSoX2-moU?rel=0" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <div class="embed-responsive embed-responsive-16by9 mb-5">
+                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/sYita4vTiN8?rel=0" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <div class="embed-responsive embed-responsive-16by9 mb-5">
+                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/XCPzeBp3S3g?rel=0" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="Contact-us-section" id="Contactus">
+    <div class="Contact-us-section" id="Followus">
         <h1 class="Contact-us-heading">Follow Us</h1>
         <p class=""></p>
         <div class="d-flex flex-row justify-content-center">
